Update Apache Flume dependency for RPM
Summary: RPM packaging still depends on the previous CDH4 version

Test Plan: Manual

Reviewers: shchen, nsafonova

Subscribers: shchen, nsafonova

Differential Revision: http://phabricator.tango.corp/D51

--- a/flume-redis-dist/pom.xml
+++ b/flume-redis-dist/pom.xml
@@ -91,7 +91,7 @@
 						<defineStatement>_unpackaged_files_terminate_build 0</defineStatement>
 					</defineStatements>
 					<requires>
-						<require>flume-ng &gt; 1.4.0+55</require>
+						<require>flume-ng &gt; 1.5.0+cdh5.1.0+10</require>
 					</requires>
 					<mappings>
 						<mapping>
